--- a/app/assets/stylesheets/new_design/landing.scss
+++ b/app/assets/stylesheets/new_design/landing.scss
@@ -119,7 +119,7 @@
       h1 {
         font-weight: 600;
         text-transform: uppercase;
-        font-size: 3.2em;
+        font-size: 3.5vw;
         padding: 10px;
         letter-spacing: -2px;
       }
@@ -128,7 +128,7 @@
         display: inline-block;
         float: left;
         padding: 8px 10px;
-        font-size: 2em;
+        font-size: 2.5vw;
       }
 
       .promo-wrapper {
@@ -475,6 +475,12 @@
     font-size: 1em;
     padding-top: 20px;
     padding-bottom: 10px;
+  }
+}
+
+@media(max-width: 767px) {
+  .row-first {
+    padding: 0 5% !important;
   }
 }
 
